crates/ditto-checker/tests/golden/type-errors/duplicate_pattern_binder.ditto
module Test exports (..)

type Pair(a, b) = Pair(a, b)

nope = fn (pair: Pair(a, a)): Array(a) ->
  match pair with
  | Pair(a, a) -> [a, a]
  end
